doc api: switch to 3.0.0
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/docs-mk/en/docs/i18n.md
+++ b/docs-mk/en/docs/i18n.md
@@ -29,7 +29,7 @@ On the other hand, at runtime, the behavior differs significantly.
 If internationalization is enabled, the following operations will be performed:
 
 1. A key will be generated from the text passed in parameter, according to the namespace (the organization of the creator of the bot)
- and the story in which this wording is requested. In the case above, this should look like ```app_arrivals_arrival_at_``` where *app* is the namespace and
+ and the story in which this wording is requested. In the case above, it will look like ```app_arrivals_arrival_Arrival at {0}``` where *app* is the namespace and
 *arrivals* the main intention of the story.
 
 2. The framework checks if this key is already present.
