--- a/docs-mk/fr/docs/i18n.md
+++ b/docs-mk/fr/docs/i18n.md
@@ -30,12 +30,12 @@ Par contre, à l'exécution, le comportement diffère significativement.
 Si l'internationalisation est activée, les opérations suivantes vont être effectuées :
 
 1. Une clé va être générée à partir du texte passé en paramètre, en fonction du namespace (l'organisation du créateur du bot)
- et de la story dans laquelle est demandé ce libellé. Dans le cas ci-dessus, cela devrait ressembler à ```app_arrivals_arrival_at_``` où *app* est le namespace et 
+ et de la story dans laquelle est demandé ce libellé. Dans le cas ci-dessus, cela devrait ressembler à ```app_arrivals_Arrival at {0}``` où *app* est le namespace et 
 *arrivals* l'intention principale de la story.
 
 2. Tock vérifie ensuite si cette clé est déjà présente en base. 
-    * Si c'est le cas, il utilise le libellé présent en base pour la locale demandée afin de trouver la traduction la plus appropriée (le connecteur ou le type d'interface peuvent également être pris en compte)
-    * Sinon, une clé est créée en base avec le libellé par défaut ("Arrival at {0}" dans notre exemple) utilisée pour la locale courante
+    * Si c'est le cas, il utilise le libellé présent en base pour la langue demandée afin de trouver la traduction la plus appropriée (le connecteur ou le type d'interface peuvent également être pris en compte)
+    * Sinon, une clé est créée en base avec le libellé par défaut ("Arrival at {0}" dans notre exemple) utilisée pour la langue courante
   
 3. Il est ensuite possible de consulter et de modifier ce libellé dans l'interface d'administration :   
   
