--- a/docs-mk/en/docs/i18n.md
+++ b/docs-mk/en/docs/i18n.md
@@ -80,8 +80,7 @@ For example, this code works perfectly well with the disabled i18n module.
     send("There are $nb files") //DANGER!! 
 ```
 
-but is problematic if i18n is enabled. As the numbers are removed from the generated key, the key and so the translated label will always be
-the same regardless of the value of the *nb* variable!
+but is problematic if i18n is enabled. A new label will be inserted for each different value of the *nb* variable!
  
 
 If it is necessary to send "not to translate" answers, use
