--- a/docs-mk/fr/docs/i18n.md
+++ b/docs-mk/fr/docs/i18n.md
@@ -3,7 +3,8 @@
 ## Activation
 
 La framework Tock met à disposition un framework complet d'internationalisation.
-Il est désactivé par défaut.
+
+- Il est désactivé par défaut pour le mode "Bot intégré".
 
 Pour l'activer, il est nécessaire d'utiliser ce code lors du démarrage du bot :
 
@@ -12,6 +13,8 @@ Pour l'activer, il est nécessaire d'utiliser ce code lors du démarrage du bot 
 ```
 
 ou de passer la propriété ```-Dtock_i18n_enabled=true``` à la JVM.
+
+- il est activé par défaut pour le mode "Bot API".
 
 ## Utilisation dans le code
 
