--- a/docs-mk/fr/docs/dev/i18n.md
+++ b/docs-mk/fr/docs/dev/i18n.md
@@ -1,24 +1,15 @@
-# Traduire et moduler les réponses du bot
+# Développer un bot multilingue (_i18n_)
 
-## Activation
+La page [Bot multilingue](../utilisateur/i18n.md) de la documentation utilisateur présente les bases de l'internationalisation
+(_i18n_) pour construire des bots avec Tock : pré-requis, _Locale_, etc.
 
-La framework Tock met à disposition un framework complet d'internationalisation.
+Cette page vient compléter cette documentation avec des éléments propres au développement. 
 
-- Il est désactivé par défaut pour le mode "Bot intégré".
+## Pré-requis
 
-Pour l'activer, il est nécessaire d'utiliser ce code lors du démarrage du bot :
+Pour activer l'internationalisation dans Tock, programmatiquement ou pas, voir [Bot multilingue](../utilisateur/i18n.md).
 
-```kotlin
-    Translator.enabled = true
-```
-
-ou de passer la propriété ```-Dtock_i18n_enabled=true``` à la JVM.
-
-- il est activé par défaut pour le mode "Bot API".
-
-## Utilisation dans le code
-
-### Principe de fonctionnement
+## Principes
 
 Le code ne change pas une fois l'internationalisation activée. Par exemple : 
 
@@ -42,9 +33,9 @@ Si l'internationalisation est activée, les opérations suivantes vont être eff
   
 3. Il est ensuite possible de consulter et de modifier ce libellé dans l'interface d'administration :   
   
-![Internationalisation](img/i18n.png "Internationalisation")
+![Internationalisation](../img/i18n.png "Internationalisation")
 
-### Format supporté
+## Format des messages
 
 Le format supporté est celui du support i18n de java, en particulier celui de la classe [MessageFormat](https://docs.oracle.com/javase/10/docs/api/java/text/MessageFormat.html)
 en java. Cela inclut le support de [ChoiceFormat](https://docs.oracle.com/javase/10/docs/api/java/text/ChoiceFormat.html) :
@@ -59,25 +50,13 @@ Par ailleurs, Tock met à disposition une extension *by* pour les dates qui perm
     send("Departure at {0}", departureDateTime by timeFormat) 
 ``` 
 
-### Locale de l'utilisateur
+## Locale utilisateur
 
-* Quand c'est possible, la locale de l'utilisateur est importée de celle de son compte. 
+Voir [Bot multilingue](../utilisateur/i18n.md).
 
-Par exemple, si le compte d'un utilisateur Messenger est configuré en français, le français sera automatiquement
- utilisé comme locale par Tock.
+## Points d'attention
 
-* Si il n'y a pas d'indication de locale, c'est la valeur ```defaultLocale``` qui est pris en compte.
-  Il est possible de modifier cette valeur par défaut avec la propriété ```-Dtock_default_locale=fr```
-  
-* Enfin il est possible de modifier la locale de l'utilisateur dans le bot lui-même : 
-
-```kotlin
-    userPreferences.locale = Locale.FRENCH
-```  
-
-### Points d'attention
-
-* Le module d'internationalisation de Tock est efficace, mais certaines pratiques, pourtant intuitives en Kotlin,
+Le module d'internationalisation de Tock est efficace, mais certaines pratiques, pourtant intuitives en Kotlin,
  sont à bannir sous peine de mauvaises surprises.
 
 Par exemple, ce code fonctionne parfaitement bien avec le module i18n désactivé.
@@ -106,7 +85,7 @@ Si vous souhaitez cependant éviter tout risque, vous pouvez utiliser la méthod
     send(i18nKey("my_unique_key", "There are {0} files", nb)) 
 ```  
 
-### Tester l'internationalisation
+## Tester l'internationalisation
 
 Un exemple de dispositif de test est disponible dans le
 [code source du bot d'exemple](https://github.com/voyages-sncf-technologies/tock-bot-open-data/tree/master/src/test/kotlin/fr/vsct/tock/bot/open/data/rule)
@@ -129,24 +108,3 @@ Il ne reste plus qu'à indiquer la locale souhaitée :
         }
     }
 ```  
-
-
-## Interface d'administration
-
-### Les différentes variantes
-
-Chaque libellé a une valeur par défaut pour chaque langue du bot.
-
-Il est aussi possible d'indiquer des réponses spécifiques :
-
-- par type de connecteur (Messenger, Google Assistant, Slack, etc.)
-- par type d'interface (Texte ou voix) - c'est utile par exemple dans le cas de Google Assistant pour supporter les cas
- des parcours voix uniquement.
- 
-Enfin, vous pouvez spécifier des *alternatives*.
-Dans ce cas, le bot utilise une des alternatives possible au hasard, à chaque fois qu'il envoie une réponse à l'utilisateur.
-
-### Import et export des données
-
-Une fonctionnalité d'import et d'export des libellés au format json ou csv est disponible. Dans le cas d'un import, seuls les
-libellés indiqués comme *validés* sont pris en compte. 
