--- a/docs-mk/en/docs/utilisateur/i18n.md
+++ b/docs-mk/en/docs/utilisateur/i18n.md
@@ -7,7 +7,7 @@ langue mais aussi du canal utilisés.
 ## Pré-requis
 
 Tock met à disposition un framework complet d'internationalisation. Il est activé par défaut en mode _Bot API_
- (par exemple sur la [plateforme de démonstration](https://demotock-production-admin.vsct-prod.aws.vsct.fr/)).
+ (par exemple sur la [plateforme de démonstration](https://demo.tock.ai/)).
 
 Dans le mode _Bot intégré_ (voir le [manuel développeur](../dev/modes.md)), l'internationalisation 
 est désactivée par défaut. Pour l'activer, il est alors nécessaire de configurer la plateforme à son démarrage :
