--- a/docs-mk/fr/docs/user/i18n.md
+++ b/docs-mk/fr/docs/user/i18n.md
@@ -46,7 +46,7 @@ Enfin, la locale par défaut peut être modifiée par un administrateur de la pl
 
 ## Traduire et faire varier les réponses du bot
 
-Dans _Tock Studio_, la section _Build_ > _Responses_ permet de gérer les libellés des réponses du bot. Voir [_Le menu Build_](studio/build.md).
+Dans _Tock Studio_, la section _Build_ > _Responses_ permet de gérer les libellés des réponses du bot. Voir [_Le menu Build_](studio/stories-and-answers.md).
 
 Chaque libellé a une valeur par défaut pour chaque langue du bot. 
 Il est possible de concevoir et configurer différentes variantes :
