--- a/docs-mk/fr/docs/user/i18n.md
+++ b/docs-mk/fr/docs/user/i18n.md
@@ -21,7 +21,7 @@ est désactivée par défaut. Pour l'activer, il est alors nécessaire de config
 ## Activer plusieurs langues pour un bot
 
 Il est possible d'ajouter et de gérer les langues actives pour un bot dans la section _NLU Applications_
-(dans _Tock Studio_). Voir [_Le menu Configuration_](studio/configuration.md).
+(dans _Tock Studio_). Voir [_Le menu Settings_](studio/configuration.md).
 
 A tout moment dans _Tock Studio_, il est possible de changer la langue sélectionnée dans la bannière en haut de page, 
 notamment pour dialoguer avec un bot dans l'interface _Test the bot_. Voir [_Interface générale_](studio/general.md).
@@ -46,7 +46,7 @@ Enfin, la locale par défaut peut être modifiée par un administrateur de la pl
 
 ## Traduire et faire varier les réponses du bot
 
-Dans _Tock Studio_, la section _Build_ > _Responses_ permet de gérer les libellés des réponses du bot. Voir [_Le menu Build_](studio/stories-and-answers.md).
+Dans _Tock Studio_, la section _Stories & Answers_ > _Answers_ permet de gérer les libellés des réponses du bot. Voir [_Le menu Stories & Answers_](studio/stories-and-answers.md).
 
 Chaque libellé a une valeur par défaut pour chaque langue du bot. 
 Il est possible de concevoir et configurer différentes variantes :
