resolves #1008 Doc: misc
- move guides to their own folder
- update Mkdocs TOC (yml)
- add some details in doc README

Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/docs-mk/fr/docs/dev/i18n.md
+++ b/docs-mk/fr/docs/dev/i18n.md
@@ -1,13 +1,13 @@
 # Développer un bot multilingue (i18n)
 
-La page [Bot multilingue](../user/i18n.md) de la documentation utilisateur présente les bases de l'internationalisation
+La page [Bot multilingue](../user/guides/i18n.md) de la documentation utilisateur présente les bases de l'internationalisation
 (_i18n_) pour construire des bots avec Tock : pré-requis, _Locale_, etc.
 
 Cette page vient compléter cette documentation avec des éléments propres au développement. 
 
 ## Pré-requis
 
-Pour activer l'internationalisation dans Tock, programmatiquement ou pas, voir [Bot multilingue](../user/i18n.md).
+Pour activer l'internationalisation dans Tock, programmatiquement ou pas, voir [Bot multilingue](../user/guides/i18n.md).
 
 ## Principes
 
@@ -52,7 +52,7 @@ Par ailleurs, Tock met à disposition une extension *by* pour les dates qui perm
 
 ## Locale utilisateur
 
-Voir [Bot multilingue](../user/i18n.md).
+Voir [Bot multilingue](../user/guides/i18n.md).
 
 ## Points d'attention
 
