--- a/docs-mk/fr/docs/user/guides/i18n.md
+++ b/docs-mk/fr/docs/user/guides/i18n.md
@@ -9,7 +9,7 @@ langue mais aussi du canal utilisés.
 Tock met à disposition un framework complet d'internationalisation. Il est activé par défaut en mode _Bot API_
  (par exemple sur la [plateforme de démonstration](https://demo.tock.ai/)).
 
-Dans le mode _Bot intégré_ (voir le [manuel développeur](../dev/modes.md)), l'internationalisation 
+Dans le mode _Bot intégré_ (voir le [manuel développeur](../../dev/modes.md)), l'internationalisation 
 est désactivée par défaut. Pour l'activer, il est alors nécessaire de configurer la plateforme à son démarrage :
 
 * Soit via le code de démarrage du bot (développeur) :
@@ -21,10 +21,10 @@ est désactivée par défaut. Pour l'activer, il est alors nécessaire de config
 ## Activer plusieurs langues pour un bot
 
 Il est possible d'ajouter et de gérer les langues actives pour un bot dans la section _NLU Applications_
-(dans _Tock Studio_). Voir [_Le menu Settings_](studio/configuration.md).
+(dans _Tock Studio_). Voir [_Le menu Settings_](../studio/configuration.md).
 
 A tout moment dans _Tock Studio_, il est possible de changer la langue sélectionnée dans la bannière en haut de page, 
-notamment pour dialoguer avec un bot dans l'interface _Test the bot_. Voir [_Interface générale_](studio/general.md).
+notamment pour dialoguer avec un bot dans l'interface _Test the bot_. Voir [_Interface générale_](../studio/general.md).
 
 ## Langue et _locale_ utilisateur
 
@@ -46,7 +46,7 @@ Enfin, la locale par défaut peut être modifiée par un administrateur de la pl
 
 ## Traduire et faire varier les réponses du bot
 
-Dans _Tock Studio_, la section _Stories & Answers_ > _Answers_ permet de gérer les libellés des réponses du bot. Voir [_Le menu Stories & Answers_](studio/stories-and-answers.md).
+Dans _Tock Studio_, la section _Stories & Answers_ > _Answers_ permet de gérer les libellés des réponses du bot. Voir [_Le menu Stories & Answers_](../studio/stories-and-answers.md).
 
 Chaque libellé a une valeur par défaut pour chaque langue du bot. 
 Il est possible de concevoir et configurer différentes variantes :
@@ -73,4 +73,4 @@ Pour le moment, pour envisager une traduction de masse, on peut par exemple :
 
 ## Développer avec l'internationalisation
 
-Le [manuel développeur Tock](../dev/modes.md) donne plus de détails sur le développement des bots multilingues.
+Le [manuel développeur Tock](../../dev/modes.md) donne plus de détails sur le développement des bots multilingues.
