Doc: fix broken links + root index
Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/docs/_fr/dev/i18n.md
+++ b/docs/_fr/dev/i18n.md
@@ -4,14 +4,14 @@ title: i18n - développement
 
 # Développer un bot multilingue (i18n)
 
-La page [Bot multilingue](../user/guides/i18n.md) de la documentation utilisateur présente les bases de l'internationalisation
+La page [Bot multilingue](../user/guides/i18n) de la documentation utilisateur présente les bases de l'internationalisation
 (_i18n_) pour construire des bots avec Tock : pré-requis, _Locale_, etc.
 
 Cette page vient compléter cette documentation avec des éléments propres au développement. 
 
 ## Pré-requis
 
-Pour activer l'internationalisation dans Tock, programmatiquement ou pas, voir [Bot multilingue](../user/guides/i18n.md).
+Pour activer l'internationalisation dans Tock, programmatiquement ou pas, voir [Bot multilingue](../user/guides/i18n).
 
 ## Principes
 
@@ -56,7 +56,7 @@ Par ailleurs, Tock met à disposition une extension *by* pour les dates qui perm
 
 ## Locale utilisateur
 
-Voir [Bot multilingue](../user/guides/i18n.md).
+Voir [Bot multilingue](../user/guides/i18n).
 
 ## Points d'attention
 
