Doc: fix home URL + broken images
Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/docs/_fr/dev/i18n.md
+++ b/docs/_fr/dev/i18n.md
@@ -37,7 +37,7 @@ Si l'internationalisation est activée, les opérations suivantes vont être eff
   
 3. Il est ensuite possible de consulter et de modifier ce libellé dans l'interface d'administration :   
   
-![Internationalisation](../img/i18n.png "Internationalisation")
+![Internationalisation](../../img/i18n.png "Internationalisation")
 
 ## Format des messages
 
