feat(scenario-designer): add new context from entity menu

--- a/bot/admin/web/src/app/scenarios/TODO.txt
+++ b/bot/admin/web/src/app/scenarios/TODO.txt
@@ -1,9 +1,13 @@
 Scenario designer :
 
-        Action-edit : Vérifier que le name fourni ne correspond pas à une autre action existante. Si oui bloquer la validation et informer l'utimisateur
+        action-edit : Vérifier que le name fourni ne correspond pas à une autre action existante. Si oui bloquer la validation et informer l'utimisateur
 
+        intent-create : vértifier les conflits de nom ?
+        
         intent-edit : Définir comment on store l'ajout ou la suppression d'entity à une sentence appartenant à une intent existante en base
 
         Adapter les css au mode nuit
 
         Desactiver les drag&drop et raccourcis clavier en dehors du mode writing
+        
+        Permettre de flaguer une intent secondaire comme également primaire
