--- a/bot/admin/web/src/app/scenarios/TODO.txt
+++ b/bot/admin/web/src/app/scenarios/TODO.txt
@@ -1,10 +1,14 @@
-Scenario designer :
+shared 
+
+        Regarder le prblm du bouton close de ChoiceDialogComponent quand le modalStatus n'est pas primary. Voir aussi l'espacement des boutons
+
+Scenarios
 
         Scenarios management => Scenarios Management
 
-        Adapter les css au mode nuit
+Scenario designer :
 
-        Regarder le prblm du bouton close de ChoiceDialogComponent quand le modalStatus n'est pas primary. Voir aussi l'espacement des boutons
+        Adapter les css au mode nuit
 
         Transformer en directive/composant? les fonctions de zoom et drag de canvas des vues casting et production ?
 
@@ -15,9 +19,9 @@ Scenario designer :
         CONCEPTION : 
                 action-edit : Vérifier que le name fourni ne correspond pas à une autre action existante. Si oui bloquer la validation et informer l'utimisateur
 
-                intent-create : vértifier les conflits de nom ?
+                intent-create : vértifier les conflits de nom. L'intent doit avoir un nom qui n'existe ni dans les intents connues du serveur, ni dans les intents définies (et encore à créer) du scenario
         
-                intent-edit : Définir comment on store l'ajout ou la suppression d'entity à une sentence appartenant à une intent existante en base
+                intent-edit : Définir comment on store l'ajout ou la suppression d'entity à une sentence appartenant à une intent existante en base. Implications sur le fonctionnement de l'étape publishing
 
                 Permettre de flaguer une intent secondaire comme également primaire
 
