--- a/bot/admin/web/src/app/scenarios/TODO.txt
+++ b/bot/admin/web/src/app/scenarios/TODO.txt
@@ -8,6 +8,8 @@ Scenarios
 
 Scenario designer :
 
+        Gérer l'init du designer quand l'id du scenario demandé n'existe pas. Actuellement l'appel à scenarioService.getScenario ne répond jamais et la page reste vide sans alerter l'utilisateur et sans re-router vers scenarios-list
+
         Adapter les css au mode nuit
 
         Transformer en directive/composant? les fonctions de zoom et drag de canvas des vues casting et production ?
