--- a/bot/admin/web/src/app/scenarios/TODO.txt
+++ b/bot/admin/web/src/app/scenarios/TODO.txt
@@ -1,42 +1,52 @@
 shared 
 
-        Regarder le prblm du bouton close de ChoiceDialogComponent quand le modalStatus n'est pas primary. Voir aussi l'espacement des boutons
+        #DONE Regarder le prblm du bouton close de ChoiceDialogComponent quand le modalStatus n'est pas primary. Voir aussi l'espacement des boutons
 
 Scenarios
 
-        Tock studio menu et titre de la vue scenarios-list : Scenarios management => Scenarios Management
+        #DONE Tock studio menu et titre de la vue scenarios-list : Scenarios management => Scenarios Management
+
+        scenario.state : draft | current | archive ? Seul draft est éditable. current & archive == freezed. Conséquence : au sein d'une même saga deux scenarios ne peuvent être current simultanement. Plusieurs scenario peuvent-ils être draft en même temps ?
 
         Peut-on supprimer tout un scenario est ses différentes versions ?
 
         La suppression d'un scenario "current" implique-t-elle la suppression de sa tickStory ?
 
-        scenario.state : draft | current | archive ? Seul draft est éditable. current & archive == freezed. Conséquence : au sein d'une même saga deux scenarios ne peuvent être current simultanement. Plusieurs scenario peuvent-ils être draft en même temps ?
-
-
 Scenario designer :
 
-        Gérer l'init du designer quand l'id du scenario demandé n'existe pas. Actuellement l'appel à scenarioService.getScenario ne répond jamais et la page reste vide sans alerter l'utilisateur et sans re-router vers scenarios-list
-
         Adapter les css au mode nuit
+
+        Gérer l'init du designer quand l'id du scenario demandé n'existe pas. Actuellement l'appel à scenarioService.getScenario ne répond jamais et la page reste vide sans alerter l'utilisateur et sans re-router vers scenarios-list
 
         Transformer en directive/composant? les fonctions de zoom et drag de canvas des vues casting et production ?
 
         Checker l'existence des intentIds référencées au chargement du designer. On ne peut pas dependre du fait que l'utilisateur soit passé par l'onglet Casting pour le laisser afficher la vue Publishing
 
+        A l'ouverture des modals positionner mettre le focus sur le 1er champ à renseigner
+
         WRITING : 
 
                 Desactiver les drag&drop et raccourcis clavier en dehors du mode writing
+
+                Enchainement de deux actions bot
         
         CONCEPTION : 
+
                 action-edit : Vérifier que le name fourni ne correspond pas à une autre action existante. Si oui bloquer la validation et informer l'utimisateur
 
                 intent-create : vértifier les conflits de nom. L'intent doit avoir un nom qui n'existe ni dans les intents connues du serveur, ni dans les intents définies (et encore à créer) du scenario.
                 Interdire les sharedIntents ?
                 L'intent ne doit pas non plus avoir un name == nameFromQualifiedName(Intent.unknown)
+
+                Intent avec intnetdefinition manquante mais affichage pas en accord
+
+                intent-edit : rafraichir context nouvellement créé dans liste des contexts associables à une entity
         
                 #DONE intent-edit : Définir comment on store l'ajout ou la suppression d'entity à une sentence appartenant à une intent existante en base. Implications sur le fonctionnement de l'étape publishing
 
-                Mettre à jours la state machine lorsqu'on renomme ou supprime un item qui était déjà référencé dans la state machine
+                Au changement de from d'un scenarioItem, supprimer les eventuelles intentDefinition et tickActionDefinition existantes
+
+                Mettre à jours la state machine lorsqu'on renomme, supprime ou change le type de from d'un item qui était déjà référencé dans la state machine
 
                 Mettre à jours la state machine lorsqu'on passe une intent de primary à non primary et vice versa
 
@@ -48,3 +58,5 @@ Scenario designer :
                 #DONE Comment le front fait-il pour créer une secondary intent ?
 
                 Intent : c'est quoi les mandatoryStates ?
+
+                Regle d'intégrité : Pour chaque action déclarant exécuter du code métier on doit trouver une classe portant le nom du handler déclaré dans l'action => A étudier
