--- a/bot/admin/web/src/app/scenarios/TODO.txt
+++ b/bot/admin/web/src/app/scenarios/TODO.txt
@@ -1,10 +1,10 @@
-shared 
+shared
 
-        Regarder le prblm du bouton close de ChoiceDialogComponent quand le modalStatus n'est pas primary. Voir aussi l'espacement des boutons
+        #DONE (espacement déjà géré avec la class gap-1 qui est présente dans la refacto de la faq) Regarder le prblm du bouton close de ChoiceDialogComponent quand le modalStatus n'est pas primary. Voir aussi l'espacement des boutons
 
 Scenarios
 
-        Tock studio menu et titre de la vue scenarios-list : Scenarios management => Scenarios Management
+        #DONE Tock studio menu et titre de la vue scenarios-list : Scenarios management => Scenarios Management
 
         Peut-on supprimer tout un scenario est ses différentes versions ?
 
@@ -17,23 +17,23 @@ Scenario designer :
 
         Gérer l'init du designer quand l'id du scenario demandé n'existe pas. Actuellement l'appel à scenarioService.getScenario ne répond jamais et la page reste vide sans alerter l'utilisateur et sans re-router vers scenarios-list
 
-        Adapter les css au mode nuit
+        #DONE Adapter les css au mode nuit
 
         Transformer en directive/composant? les fonctions de zoom et drag de canvas des vues casting et production ?
 
         Checker l'existence des intentIds référencées au chargement du designer. On ne peut pas dependre du fait que l'utilisateur soit passé par l'onglet Casting pour le laisser afficher la vue Publishing
 
-        WRITING : 
+        WRITING :
 
                 Desactiver les drag&drop et raccourcis clavier en dehors du mode writing
-        
-        CONCEPTION : 
+
+        CONCEPTION :
                 action-edit : Vérifier que le name fourni ne correspond pas à une autre action existante. Si oui bloquer la validation et informer l'utimisateur
 
                 intent-create : vértifier les conflits de nom. L'intent doit avoir un nom qui n'existe ni dans les intents connues du serveur, ni dans les intents définies (et encore à créer) du scenario.
                 Interdire les sharedIntents ?
                 L'intent ne doit pas non plus avoir un name == nameFromQualifiedName(Intent.unknown)
-        
+
                 #DONE intent-edit : Définir comment on store l'ajout ou la suppression d'entity à une sentence appartenant à une intent existante en base. Implications sur le fonctionnement de l'étape publishing
 
                 Mettre à jours la state machine lorsqu'on renomme ou supprime un item qui était déjà référencé dans la state machine
@@ -42,9 +42,9 @@ Scenario designer :
 
                 #DONE Permettre de flaguer une intent secondaire comme également primaire
 
-        PRODUCTION : 
+        PRODUCTION :
 
-        PUBLISHING : 
+        PUBLISHING :
                 #DONE Comment le front fait-il pour créer une secondary intent ?
 
                 Intent : c'est quoi les mandatoryStates ?
