feat(scenario-designer): disable drag&drop and keyboard shortcuts outside writing mode

--- a/bot/admin/web/src/app/scenarios/TODO.txt
+++ b/bot/admin/web/src/app/scenarios/TODO.txt
@@ -26,7 +26,7 @@ Scenario designer :
 
         WRITING :
 
-                Desactiver les drag&drop et raccourcis clavier en dehors du mode writing
+                #DONE Desactiver les drag&drop et raccourcis clavier en dehors du mode writing
 
                 #DONE Au changement de from d'un scenarioItem, supprimer les eventuelles intentDefinition et tickActionDefinition existantes
 
