feat(scenario-designer): final item attribute set on corresponding actionDefinition. Confirm modal on deletion of item with definition. Fix on removeSmStateById

--- a/bot/admin/web/src/app/scenarios/TODO.txt
+++ b/bot/admin/web/src/app/scenarios/TODO.txt
@@ -64,6 +64,8 @@ Scenario designer :
 
         PUBLISHING :
 
+                A la modification d'une answer existante, faire un update plutot qu'un post
+
                 Intent : c'est quoi les mandatoryStates ?
 
                 Regle d'intégrité : Pour chaque action déclarant exécuter du code métier on doit trouver une classe portant le nom du handler déclaré dans l'action => A étudier
