--- a/bot/admin/web/src/app/scenarios/TODO.txt
+++ b/bot/admin/web/src/app/scenarios/TODO.txt
@@ -14,7 +14,13 @@ Scenarios
 
 Scenario designer :
 
+        Faire fonctionner le designer en mode read-only si scenario.state n'est pas "draft"
+
         Transformer en directive/composant? les fonctions de zoom et drag de canvas des vues casting et production ?
+
+        Mettre en place un mecanisme pour l'update des answers existantes mais dont le texte à été modifié dans le designer depuis la derniere publication
+
+        Au chargement checker l'existence des answersId référencées. Pour celles qui n'existent plus, supprimer le answerId pour permettre à nouveau le post à la publication
 
         Checker l'existence des intentIds référencées au chargement du designer. On ne peut pas dependre du fait que l'utilisateur soit passé par l'onglet Casting pour le laisser afficher la vue Publishing
 
